--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "angular2-cookie",
-  "version": "1.2.6",
+  "version": "1.2.7",
   "description": "Implementation of Angular 1.x $cookies service to Angular 2",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/salemdar/angular2-cookie.git"
+    "url": "git+https://github.com/martinarias/angular2-cookie.git"
   },
   "keywords": [
     "angular2",
@@ -17,12 +17,12 @@
     "ng2-cookies",
     "ng2-cookie"
   ],
-  "author": "Samet Alemdar <sa.alemdar@hotmail.com>",
+  "author": "Martin Arias<npm@borderless-software.com",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/salemdar/angular2-cookie/issues"
+    "url": "https://github.com/martinarias/angular2-cookie/issues"
   },
-  "homepage": "https://github.com/salemdar/angular2-cookie#readme",
+  "homepage": "https://github.com/martinarias/angular2-cookie#readme",
   "engines": {
     "node": ">=5.0.0"
   },
